--- a/front/src/index.html
+++ b/front/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="assets/logo.png">
 </head>
 <body>
+  <div class="bg bg1"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  
   <app-root></app-root>
 </body>
 </html>
